# python-open-ephys

./: .gitignore  ANNOUNCEMENT_DRAFT.md  CONTRIBUTING.md  README.md  example_emg_rms_barplot.py  example_emg_to_servo.py  example_get_samples.py  example_realtime_stream.py  paper.bib  paper.md  pyproject.toml  realtime_decode.py  train_model.py
.github/: copilot-instructions.md
.github/workflows/: paper.yml  publish.yml  test.yml  test_release.yml
docs/source/: conf.py  index.rst  modules.rst  pyoephys.applications.rst  pyoephys.interface.rst  pyoephys.io.rst  pyoephys.ml.rst  pyoephys.processing.rst  pyoephys.rst
examples/LSL/: lsl_playback.py  lsl_stacked_plot.py  lsl_viewer.py
examples/OpenEphysGUI/: example_get_samples.py  zmq_client.py  zmq_stacked_plot.py
examples/analysis/: run_channel_qc.py
examples/applications/: csv_plotter_gui.py  joint_angle_regression_gui.py  run_emg_viewer.py
examples/chatgpt/: 1_build_training_dataset.py  2_train_model.py  3a_predict_client.py  3av2_predict_client.py  3b_predict_oebin.py  3bv2_predict_oebin.py  3c_predict_npz_cache_debug.py  3cv2_predict_gui.py  3cv2_predict_gui_window.py  3cv2_predict_gui_zmq.py  3cv2_predict_zmq.py  3dv2_predict_npz.py  cacheify_oebin_npz.py  delete.py  delete10.py  delete11.py  delete12.py  delete13.py  delete14.py  delete15.py  delete16.py  delete2.py  delete3.py  delete4.py  delete5.py  delete6.py  delete7.py  delete8.py  (+5 more)
scripts/: analyze_channels.py  find_qc_candidates.py  find_qc_candidates_v2.py  generate_pipeline_figure.py  inspect_data.py
tests/: test_imports.py  test_io_basic.py  test_ml.py  test_processing.py
utilities/: realtime_plotter.py
(+107 files in other folders)
